--- a/bootstap.css
+++ b/bootstap.css
@@ -44,13 +44,13 @@ h1.header {
     }
   }
 
-  video {
+  .video {
     max-width: 100%;
     height: auto;
 }
 
 @media (min-width: 1025px) {
-  video {
+  .video {
     width: 600px;
     height: 400px;
     position: absolute;
